# mocap_ros_cpp

./: CMakeLists.txt  lunch.sh  package.xml  readme.md  readme_cn.md  retarget.json
noitom_ros1_cpp/: CMakeLists.txt  launch.sh  package.xml
noitom_ros1_cpp/src/: robot_api_demo.cpp
noitom_ros2_cpp/: launch.sh  readme.md
noitom_ros2_cpp/include/noitom_ros2_cpp/: MocapApi.h
noitom_ros2_cpp/src/: robot_api_demo.cpp
src/: robot_api_demo.cpp
