<?xml version="1.0"?>
<package format="2">
  <name>noitom_ros1_cpp</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pr.beijing@noitom.com">noitom</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nlohmann_json</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nlohmann_json</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>